--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,15 @@
 .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+    // width: 480px;
+    // padding-left: 15px;
+    // padding-right: 15px;
     margin: 0px auto;
+    @media screen and (min-width: 480px) {
+        max-width: 480px;
+        }
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
+    @media screen and (min-width: 1200px) {
+        max-width: 1170px;
+    }
 }
