--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,24 +1,44 @@
 .about {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding: 60px 0px;
+    @media screen and (min-width: 1200px) {
+    padding: 94px 0px;;
+    }
 }
 
 .about__list {
-    display: flex;
-    gap: 30px;
+    padding: 0px 15px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+        padding: 0px;
+    }
 }
 
-.about__title {
-    margin-bottom: 10px;
+.about__item {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+    @media screen and (min-width: 768px) {
+    width: calc((100% - 30px)/2);
+    }
 
-    @include fonts (null, 14, 1.14, 0.03);
-
-    text-transform: uppercase;
+}
+.about__item:not(:last-child) {
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+        margin: 0px;
+    }
 }
 
 .about__icon {
     display: inline-flex;
-    width: 270px;
+    width: 100%;
     height: 120px;
     align-items: center;
     justify-content: center;
@@ -28,6 +48,21 @@
 
     border-radius: 4px;
 }
+
+.about__title {
+    margin-bottom: 10px;
+
+    @include fonts (null, 14, 1.17, 0.03);
+
+    text-transform: uppercase;
+
+    @media screen and (min-width: 768px) {
+        text-align: left;
+        width: 100%;
+    }
+}
+
+
 
 .about__text {
     @include fonts (null, 14, 1.71, 0.03);
