--- a/sass/layouts/_activity.scss
+++ b/sass/layouts/_activity.scss
@@ -1,5 +1,10 @@
 .activity {
+    display: none;
     padding-bottom: 94px;
+    @media screen and (min-width: 1200px) {
+        display: inherit;
+    }
+
 }
 
 .activity__title {
