--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,26 +1,48 @@
 .hero {
+    margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    
+    height: 400px;
+    max-width: 480px;
+    background-color: #C4C4C4;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-tel.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media screen and (min-width: 768px) {
+    height: 459px;
+    max-width: 768px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-tab.jpg);
+    }
+    @media screen and (min-width: 1200px) {
     height: 600px;
     max-width: 1600px;
-    margin: 0 auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
-
-    background-color: #C4C4C4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero.jpg);
+    }
 }
 
 .hero__title {
-    max-width: 696px;
-    margin: 0 auto;
-    margin-bottom: 30px;
 
-    @include fonts (900, 44, 1.36, 0.06);
+    margin: 0 auto 30px auto;
+    padding: 0 15px 0 15px;
 
+    @include fonts (900, 26, 1.62, 0.06);
     text-align: center;
-
     text-transform: uppercase;
-
+        
     color: var(--additional-color);
+    
+    @media screen and (min-width: 768px) {
+    @include fonts (900, 26, 1.62, 0.06);
+    width: 360px;
+    }
+
+    @media screen and (min-width: 1200px) {
+    @include fonts (900, 44, 1.36, 0.06);
+    width: 696px;
+    }
 }
 
 .hero__btn {
@@ -29,12 +51,10 @@
     text-align: center;
     justify-content: center;
 
-    width: 216px;
+    width: 200px;
     margin: 0 auto;
     padding-top: 8px;
-    padding-right: 30px;
     padding-bottom: 8px;
-    padding-left: 30px;
 
     font-family: "Roboto";
     
