--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,11 +2,25 @@
     display: flex;
     margin: 0px auto;
     border-bottom: 2px solid #ECECEC;
+    justify-content: space-between;
+    align-items: center
 }
 
 .header__container {
+    padding: 15px;
+    margin: 0;
+        @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
+    padding: 21px 15px;
+    margin: 0 auto;
+        }
+    @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0 auto;
+    }
 }
 
 .header__navigation {
@@ -14,10 +28,18 @@
 }
 
 .header__list {
+    display: none;
+    @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
     gap: 50px;
+    margin-left: 88px;
+    margin-right: 96px;
+    }
+    @media screen and (min-width: 1200px) {
     margin-left: 93px;
+    margin-right: 305px;
+    }
 
 }
 
@@ -26,7 +48,7 @@
 
     padding: 32px 0px;
 
-    @include fonts (500, 14, 1.14, 0.02);
+    @include fonts (500, 14, 1.17, 0.02);
 
     color: var(--title-color);
 }
@@ -45,9 +67,15 @@
 }
 
 .header__contact-list {
+    display: none;
+    @media screen and (min-width: 768px) {
+    display: inline;
+    }
+    @media screen and (min-width: 1200px) {
     display: flex;
-    gap: 50px;
+    gap: 40px;
     margin-left: auto;
+    }
 }
 
 .header__link-email,
@@ -55,18 +83,54 @@
     display: inline-flex;
     align-items: center;
     flex-direction: row-reverse;
-    padding: 32px 0px;
+    @media screen and (min-width: 1200px) {
+        padding: 32px 0px;
+        @include fonts (500, 14, 1.17, 0.02);
+    }
 
-    @include fonts (500, 14, 1.14, 0.02);
+    @include fonts (500, 12, 1.17, 0.02);
 
     color: var(--text-color);
 }
-
-.icon-smartphone, 
-.icon-envelope {
-    fill: currentColor;
-    margin-right: 10px;
+.header__link-email{
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+margin-bottom: 10px;;
+    }
+    
 }
 
 
+.icon-envelope {
+    fill: currentColor;
+    margin-right: 10px;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+        width: 14px;
+        height: 10px;
+    }
+}
+.icon-smartphone {
+    fill: currentColor;
+    margin-right: 10px;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+        width: 10px;
+        height: 14px;
+    }
+}
+.icon-menu_24px {
+    margin-right: 15px;
+    position: relative;
+    @media screen and (min-width: 768px) {
+        display: none;}
+}
 
+.icon-close_24px {
+    position: absolute;
+    right: 15px;
+    @media screen and (min-width: 768px) {
+    display: none;
+    }
+}
+
+.header__contact-icons {
+    line-height: 0%;
+}
