--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,6 +1,11 @@
 .header__logo {
     font-family: "Raleway";
-    @include fonts (700, 26, 1.19, 0.03);
+    @include fonts (700, 24, 1.17, 0.03);
+    
+        @media screen and (min-width: 1200px) {
+            // text-align: left;
+            @include fonts (700, 26, 1.17, 0.03);
+        }
 
     color: #000000;
 
@@ -15,11 +20,17 @@
 }
 
 .footer__logo {
-    display: inline-block;
-    margin-bottom: 20px;
+    display: block;
+    text-align: center;
+    margin-bottom: 28px;
 
     font-family: "Raleway";
-    @include fonts (700, 26, 1.19, 0.03);
+    @include fonts (700, 24, 1.17, 0.03);
+
+    @media screen and (min-width: 1200px) {
+        text-align: left;
+        @include fonts (700, 26, 1.17, 0.03);
+    }
 
     color: var(--additional-color);
 
