--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,3 @@
-
 .backdrop {
     position: fixed;
     top: 0;
@@ -14,10 +13,17 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 40px 39px 40px 41px;
-        
+    padding: 40px;
+    width: calc(100vw - 30px);
+    min-height: 609px;
+    @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+    }
+    @media screen and (min-width: 768px) {
     width: 528px;
-    min-height: 581px;
+    height: 581px;
+    }
 
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -62,23 +68,43 @@
 .callback-title {
     margin-bottom: 12px;
 
-    @include fonts (700, 20, 1.6, 0.03);
+    @include fonts (700, 18, 1.5, 0.03);
 
+    @media screen and (min-width: 480px) {
+        @include fonts (700, 20, 1.5, 0.03);
+    }
+    @media screen and (min-width: 1200px) {
+        @include fonts (700, 20, 1.6, 0.03);
+    }
     text-align: center;
 }
 
 .callback {
-    width: 448px;
-
+    width: calc(100vw - 110px);
+    @media screen and (min-width: 480px) {
+            width: 370px;
+        }
+        @media screen and (min-width: 768px) {
+            width: 448px;
+        }
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
 }
 
+.policy-section {
+    display: block;
+}
 
 .callback input {
     box-sizing: border-box;
-    width: 448px;
+    min-width: calc(100vw - 110px);
+    @media screen and (min-width: 480px) {
+        min-width: 370px;
+    }
+    @media screen and (min-width: 768px) {
+    min-width: 448px;
+    }
     padding-left: 42px;
 
     color: var(--title-color);
@@ -91,7 +117,15 @@
 
 .callback textarea {
     box-sizing: border-box;
-    width: 448px;
+    min-width: calc(100vw - 110px);
+    
+        @media screen and (min-width: 480px) {
+            min-width: 370px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            min-width: 448px;
+        }
     min-height: 120px;
     padding: 12px 16px;
 
@@ -173,8 +207,10 @@ textarea::placeholder {
 
     margin: 0 auto;
 
+    @include fonts (null, 12, 1.17, 0.03);
+    @media screen and (min-width: 1200px) {
     @include fonts (null, 14, 1.17, 0.03);
-
+        }
     color: var(--text-color);
 }
 
