--- a/css/main.css
+++ b/css/main.css
@@ -628,6 +628,10 @@ textarea::placeholder {
 .icon-close_24px {
   position: absolute;
   right: 15px;
+  top: 10px;
+}
+.icon-close_24px:hover {
+  fill: var(--link-color);
 }
 @media screen and (min-width: 768px) {
   .icon-close_24px {
@@ -637,6 +641,94 @@ textarea::placeholder {
 
 .header__contact-icons {
   line-height: 0%;
+}
+
+.menu-close {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  background-color: var(--additional-color);
+}
+
+.menu-close__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 48px 40px;
+  overflow: auto;
+}
+
+.menu-close__list {
+  margin-bottom: 306px;
+}
+
+.menu-close__list-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-close__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+}
+
+.menu-close__contact-items:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-close__contact-list {
+  margin-bottom: 64px;
+}
+
+.menu-close__link-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--link-color);
+}
+
+.menu-close__link-email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+}
+
+.menu-close__soc {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--link-color);
+}
+
+.menu-close__item {
+  padding: 0 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.menu-close__item:hover, .menu-close__item:focus {
+  color: var(--link-color);
+}
+
+.menu-close__item:first-child {
+  padding-left: 0px;
+}
+
+.menu-close__item:last-child {
+  border-right: none;
+}
+
+.menu-close__soc-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .hero {
