--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,23 +6,23 @@
     max-width: 480px;
 
     background-color: #C4C4C4;
-    background-image: var(--gra), url(../../images/hero-tel.jpg);
+    background-image: var(--gra), url(../images/hero-tel.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: var(--gra), url(../../images/hero-tel-2х.jpg);
+            background-image: var(--gra), url(../images/hero-tel-2х.jpg);
         }
 
     @include tablet {
         height: 459px;
         max-width: 768px;
-        background-image: var(--gra), url(../../images/hero-tab.jpg);
+        background-image: var(--gra), url(../images/hero-tab.jpg);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: var(--gra), url(../../images/hero-tab-2x.jpg);
+                background-image: var(--gra), url(../images/hero-tab-2x.jpg);
             }
     }
 
